Fixed images on smaller screens.

--- a/src/app/assets/scss/partials/_artists.scss
+++ b/src/app/assets/scss/partials/_artists.scss
@@ -15,6 +15,7 @@
 .artist_image {
 	border: 5px solid #ffffff;
 	border-radius: 200px;
+	width: 70%;
 }
 
 .artist_caption {
